--- a/paper/references.bib
+++ b/paper/references.bib
@@ -1,5 +1,3 @@
-
-
 @Manual{citeR,
     title = {{R: A Language and Environment for Statistical Computing}},
     author = {{R Core Team}},
@@ -9,38 +7,28 @@
     url = {https://www.R-project.org/},
   }
   
+@Manual{databank,
+    title = {World Development Indicators},
+    author = {DataBank},
+    organization = {World Bank Group},
+    year = {2024},
+    url = {https://databank.worldbank.org/source/world-development-indicators},
+  }
+
+@Manual{ilostat,
+    title = {Indicators and data tools},
+    author = {ILO},
+    organization = {ILO},
+    url = {https://ilostat.ilo.org/data/},
+  }
   
-@Article{thereferencecanbewhatever,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
+@Manual{WHOdata,
+    title = {Data collections},
+    author = {WHO},
+    organization = {WHO},
+    url = { https://www.who.int/data/collections
+},
   }  
-  
-  
-@Manual{citeLahman,
-    title = {{Lahman: Sean `Lahman' Baseball Database}},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
-}
 
 @Misc{rstanarm,
     title = {{rstanarm: {Bayesian} applied regression modeling via {Stan}}},
@@ -50,30 +38,86 @@
     url = {https://mc-stan.org/rstanarm/},
   }
   
-@Manual{palmerpenguins,
-    title = {{palmerpenguins: Palmer Archipelago (Antarctica) penguin data}},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
+  @Article{citetidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
   }
   
-  
-@book{tellingstories,
-    title = {Telling Stories with Data},
-    author = {Rohan Alexander},
-    year = {2023},
-    publisher = {Chapman; Hall/CRC},
-    url = {https://tellingstorieswithdata.com/}
-  }  
-  
-  
-
-@Manual{shelter,
-    title = {Deaths of Shelter Residents},
-    author = {{Toronto Shelter & Support Services}},
+  @Manual{citeknitr,
+    title = {knitr: A General-Purpose Package for Dynamic Report
+      Generation in R},
+    author = {Yihui Xie},
     year = {2024},
-    note = {As accessed 2024-10-02.},
-    url = {https://open.toronto.ca/dataset/deaths-of-shelter-residents/},
-  }  
+    note = {R package version 1.48},
+    url = {https://yihui.org/knitr/},
+  }
+
+  @Manual{citejanitor,
+    title = {janitor: Simple Tools for Examining and Cleaning Dirty Data},
+    author = {Sam Firke},
+    year = {2023},
+    note = {R package version 2.2.0},
+    url = {https://CRAN.R-project.org/package=janitor},
+  }
+  
+  @Manual{citehere,
+    title = {here: A Simpler Way to Find Your Files},
+    author = {Kirill Müller},
+    year = {2020},
+    note = {R package version 1.0.1},
+    url = {https://CRAN.R-project.org/package=here},
+  }
+  
+  @Book{citeggplot2,
+    author = {Hadley Wickham},
+    title = {ggplot2: Elegant Graphics for Data Analysis},
+    publisher = {Springer-Verlag New York},
+    year = {2016},
+    isbn = {978-3-319-24277-4},
+    url = {https://ggplot2.tidyverse.org},
+  }
+
+  @Manual{citedplyr,
+    title = {dplyr: A Grammar of Data Manipulation},
+    author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
+    year = {2023},
+    note = {R package version 1.1.4},
+    url = {https://CRAN.R-project.org/package=dplyr},
+  }
+  
+  @Manual{citetibble,
+    title = {tibble: Simple Data Frames},
+    author = {Kirill Müller and Hadley Wickham},
+    year = {2023},
+    note = {R package version 3.2.1},
+    url = {https://CRAN.R-project.org/package=tibble},
+  }
+  
+  @Manual{citereadr,
+    title = {readr: Read Rectangular Text Data},
+    author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
+    year = {2023},
+    note = {R package version 2.1.4},
+    url = {https://CRAN.R-project.org/package=readr},
+  }
+  
+  @article{owid-causes-of-death-treemap,
+    author = {Max Roser},
+    title = {Causes of death globally: what do people die from?},
+    journal = {Our World in Data},
+    year = {2021},
+    note = {https://ourworldindata.org/causes-of-death-treemap}
+  }
+  
+  @Manual{korea-suicide-rate,
+    title = {Suicide Trends and Responses in Korea},
+    author = {Yuri Lee},
+    year = {2023},
+    url = {https://sri.kostat.go.kr/board.es?mid=b10104000000&bid=12046&act=view&list_no=432657&tag=&nPage=1&ref_bid=#:~:text=Attached%20File&text=Korea%20has%20the%20highest%20suicide,economic%20crises%20and%20social%20issues.}
+  }
