minor change in abstract

--- a/paper/paper.qmd
+++ b/paper/paper.qmd
@@ -5,7 +5,7 @@ author:
 thanks: "Code and data are available at: [https://github.com/tonytto/suicide-mortality-analysis](https://github.com/tonytto/suicide-mortality-analysis)."
 date: today
 date-format: long
-abstract: "Suicide is a significant issue that extends beyond individual suffering, profoundly impacting social cohesion and economic stability while being closely linked to structural factors such as social inequality, inadequate mental health services, and economic hardships. This paper analyzes the relationship between national suicide rates in 2019 and socioeconomic factors such as GDP per capita, unemployment rate, youth NEET rate, and alcohol consumption. The model analysis reveals that GDP per capita, unemployment rate, and alcohol consumption per capita have a positive relationship with suicide rates. Among these, when other variables are held constant, a 1-liter increase in adults' average pure alcohol consumption corresponds to an approximate increase of 0.65 suicides per 100,000 people. Based on the identified relationship between suicide rates and societal issues, this paper offers insights for nations to explore effective policy directions for reducing suicide rates."
+abstract: "Suicide is a significant issue that extends beyond individual suffering, profoundly impacting social cohesion and economic stability while being closely linked to structural factors such as social inequality, inadequate mental health services, and economic hardships. This paper analyzes the relationship between national suicide rates in 2019 and socioeconomic factors such as GDP per capita, unemployment rate, youth NEET rate, and alcohol consumption. The model analysis reveals that GDP per capita, unemployment rate, and alcohol consumption per capita have a positive relationship with suicide rates. Among these, a 1-liter increase in adults' average pure alcohol consumption corresponds to an approximate increase of 0.65 suicides per 100,000 people and when 1% of unemployment rate rise, approximately 0.27 more people commit suicides per 100,000 people. Based on the identified relationship between suicide rates and societal issues, this paper offers insights for nations to explore effective policy directions for reducing suicide rates."
 format: pdf
 number-sections: true
 bibliography: references.bib
